# Chess

./: Bishop.cpp  Bishop.h  CMakeLists.txt  Chess.cpp  Field.cpp  Field.h  Figure.cpp  Figure.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Player.cpp  Player.h  Queen.cpp  Quenn.cpp  Quenn.h  README.md  Rook.cpp  Rook.h
headers/: Field.h  Pawn.h  Queen.h
src/: Bishop.cpp  Chess.cpp  Field.cpp  Field.h  Figure.h  King.cpp  Knight.cpp  Pawn.cpp  Player.cpp  Queen.cpp  Rook.cpp
